tests/parser/fail/super-field.som
"test:
fail-message:
  - contains: define
  - contains: super
"

SuperField = (
  |a b c super d e f|

  run = (42)
)
